tournament handlers
