# server/handler/tournament.go
@@ -4,6 +4,8 @@ import (
 	"encoding/json"
 	"io"
 	"net/http"
+	"slices"
+	"strconv"
 	"vezgammon/server/db"
 	"vezgammon/server/types"
 
@@ -19,7 +21,7 @@ import (
 // @Success 201 {object} types.ReturnTournament
 // @Failure 400 "bad data, tournament alredy open"
 // @Failure 500 "internal server error"
-// @Router /play/tournament [post]
+// @Router /tournament [post]
 func CreateTournament(c *gin.Context) {
 	userID := c.MustGet("userID").(int64)
 
@@ -71,9 +73,40 @@ func CreateTournament(c *gin.Context) {
 // @Success 200 {object} types.ReturnTournament
 // @Failure 404 "tournament not found"
 // @Failure 400 "alredy in a tournament"
-// @Router /play/tournament/{tournament_id} [post]
+// @Router /tournament/{tournament_id} [post]
 func JoinTournament(c *gin.Context) {
+	userID := c.MustGet("userID").(int64)
+	id := c.Param("tournament_id")
+	id64, err := strconv.ParseInt(id, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
 
+	tournament, err := db.GetTournament(id64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	if slices.Contains(tournament.Users, userID) {
+		c.JSON(http.StatusBadRequest, "alredy in a tournament")
+		return
+	}
+	tournament.Users = append(tournament.Users, userID)
+	err = db.UpdateTournament(tournament)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	returnTournament, err := db.TournamentToReturnTournament(*tournament)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, returnTournament)
 }
 
 // @Summary Get a tournament
@@ -84,9 +117,28 @@ func JoinTournament(c *gin.Context) {
 // @Param tournament_id path int true "Tournament ID"
 // @Success 200 {object} types.ReturnTournament
 // @Failure 404 "tournament not found"
-// @Router /play/tournament/{tournament_id} [get]
+// @Router /tournament/{tournament_id} [get]
 func GetTournament(c *gin.Context) {
+	id := c.Param("tournament_id")
+	id64, err := strconv.ParseInt(id, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
 
+	tournament, err := db.GetTournament(id64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	returnTournament, err := db.TournamentToReturnTournament(*tournament)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, returnTournament)
 }
 
 // @Summary List all tournaments
@@ -98,5 +150,11 @@ func GetTournament(c *gin.Context) {
 // @Failure 500 "internal server error"
 // @Router /play/tournament/list [get]
 func ListTournaments(c *gin.Context) {
+	tournamentlist, err := db.GetTournamentList()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
 
+	c.JSON(http.StatusOK, tournamentlist)
 }
